--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
@@ -19,35 +19,68 @@
             <img src="img/boolflix.png" id="logo">
             <div class="header_inputs">
                 <input type="text" name="search" id="search" v-model="keyWord" @keyup.enter="sendData">
-                <input type="button" value="Search" @click="sendData">    
+                <button @click="sendData" id="search_btn"><i class="fas fa-search"></i></button>    
             </div>
         </header>
 
         <main>
             <div class="row">
-                <div class="card col-lg-3 col-md-6 col-xs-12" v-for="film in filmList"> 
-                    <img :src=" 'https://image.tmdb.org/t/p/w342' + film.poster_path" class="poster">
-                    <div>Titolo: {{film.title}} {{film.name}}</div> 
-                    <div>Titolo originale: {{film.original_title}} {{film.original_name}}</div>  
-                    <div>
-                        Lingua originale: {{film.original_language}} 
-                        <div class="flag"> 
-                            <img :src=" (film.original_language == 'en') ? 'https://www.countryflags.io/gb/flat/64.png' : 
-                            (film.original_language == 'cs') ? 'https://www.countryflags.io/cz/flat/64.png' :
-                            (film.original_language == 'da') ? 'https://www.countryflags.io/dk/flat/64.png' :
-                            (film.original_language == 'ja') ? 'https://www.countryflags.io/jp/flat/64.png' :
-                            'https://www.countryflags.io/' + film.original_language + '/flat/64.png' " alt=""> 
-                        </div>
-                    </div> 
-                    <div>Voto critica: {{Math.ceil(film.vote_average * 5/10)}}</div>
-                    <div>
-                        <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 0 ? 'active' : null"></i>
-                        <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 1 ? 'active' : null"></i>
-                        <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 2 ? 'active' : null"></i>
-                        <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 3 ? 'active' : null"></i>
-                        <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 4 ? 'active' : null"></i>
+
+                <!-- card film -->
+                <div class="my_card col-xl-3 col-lg-4 col-md-6 col-xs-12 d-flex align-items-stretch" v-for="film in filmListMod">
+                    <div class="my_card_content">
+                        <img :src=" 'https://image.tmdb.org/t/p/w342' + film.poster_path" class="poster">
+                        <div>Titolo: {{film.title}} </div> 
+                        <div>Titolo originale: {{film.original_title}} </div>  
+                        <div>
+                            Lingua originale: {{film.original_language}} 
+                            <div class="flag"> 
+                                <img :src=" (film.original_language == 'en') ? 'https://www.countryflags.io/gb/flat/64.png' : 
+                                (film.original_language == 'cs') ? 'https://www.countryflags.io/cz/flat/64.png' :
+                                (film.original_language == 'da') ? 'https://www.countryflags.io/dk/flat/64.png' :
+                                (film.original_language == 'ja') ? 'https://www.countryflags.io/jp/flat/64.png' :
+                                'https://www.countryflags.io/' + film.original_language + '/flat/64.png' " > 
+                            </div>
+                        </div> 
+                        <div>Voto critica: {{Math.ceil(film.vote_average * 5/10)}}</div>
+                        <div>
+                            <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 0 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 1 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 2 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 3 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(film.vote_average* 5/10) > 4 ? 'active' : null"></i>
+                        </div> 
                     </div>  
                 </div>
+
+                <!-- card serie tv -->
+                <div class="my_card col-xl-3 col-lg-4 col-md-6 col-xs-12 d-flex align-items-stretch" v-for="serie in serieListMod"> 
+                    <div class="my_card_content">
+                        <img :src=" 'https://image.tmdb.org/t/p/w342' + serie.poster_path" class="poster">
+                        <div>Titolo: {{serie.name}}</div> 
+                        <div>Titolo originale: {{serie.original_name}}</div>  
+                        <div>
+                            Lingua originale: {{serie.original_language}} 
+                            <div class="flag"> 
+                                <img :src=" (serie.original_language == 'en') ? 'https://www.countryflags.io/gb/flat/64.png' : 
+                                (serie.original_language == 'cs') ? 'https://www.countryflags.io/cz/flat/64.png' :
+                                (serie.original_language == 'da') ? 'https://www.countryflags.io/dk/flat/64.png' :
+                                (serie.original_language == 'ja') ? 'https://www.countryflags.io/jp/flat/64.png' :
+                                'https://www.countryflags.io/' + serie.original_language + '/flat/64.png' " > 
+                            </div>
+                        </div> 
+                        <div>Voto critica: {{Math.ceil(serie.vote_average * 5/10)}}</div>
+                        <div>
+                            <i class="fas fa-star" :class=" Math.ceil(serie.vote_average* 5/10) > 0 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(serie.vote_average* 5/10) > 1 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(serie.vote_average* 5/10) > 2 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(serie.vote_average* 5/10) > 3 ? 'active' : null"></i>
+                            <i class="fas fa-star" :class=" Math.ceil(serie.vote_average* 5/10) > 4 ? 'active' : null"></i>
+                        </div> 
+                    </div>
+                </div>
+
+
             </div>
         </main>
     </div>
