aggiunto tasto info per attori

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>{{titleFilm}}</h1>
             <div class="row film">
                 <!-- card film -->
-                <div class="my_card col-xl-3 col-lg-4 col-md-6 col-xs-12 d-flex align-items-stretch" v-for="film in filmListMod">
+                <div class="my_card col-xl-3 col-lg-4 col-md-6 col-xs-12 align-items-stretch" v-for="(film, index) in filmListMod">
                     <div class="my_card_content">
                         <div class="my_card_image">
                             <img :src=" 'https://image.tmdb.org/t/p/w342' + film.poster_path" class="poster">
@@ -54,15 +54,21 @@
                                 <i class="fas fa-star" :class=" parseInt(film.vote_average* 5/10) > 3 ? 'active' : null"></i>
                                 <i class="fas fa-star" :class=" parseInt(film.vote_average* 5/10) > 4 ? 'active' : null"></i>
                             </div> 
+                            <div class="info" @click="popUpShow(index)"><i class="fas fa-info-circle"></i></div>
                         </div>  
-                    </div>   
+                    </div> 
+                    <div class="popUp" :class="filmCounter == index ? 'visible' : 'notVisible' ">
+                        <i class="fas fa-times" @click="popUpClose(index)"></i>
+                        <div style="padding: 20px;">Attori principali:</div>
+                        <div v-for="actor in actors">{{actor}}</div>
+                    </div>  
                 </div>
             </div>
 
             <h1>{{titleSerie}}</h1>
             <div class="row serie">
                 <!-- card serie tv -->
-                <div class="my_card col-xl-3 col-lg-4 col-md-6 col-xs-12 d-flex align-items-stretch" v-for="serie in serieListMod"> 
+                <div class="my_card col-xl-3 col-lg-4 col-md-6 col-xs-12 align-items-stretch" v-for="serie in serieListMod"> 
                     <div class="my_card_content">
                         <img :src=" 'https://image.tmdb.org/t/p/w342' + serie.poster_path" class="poster">
                         <div class="my_card_text">
